--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -37,17 +37,17 @@ website:
         contents:
         - section: Roberta-based models
           contents:
-          - 20_model_main_roberta_singlehead.ipynb
-          - 21_model_main_roberta_multihead.ipynb
-          - 22_model_main_roberta_multihead_regression.ipynb
-          - 23_model_main_roberta_multilabel.ipynb
-          - 24_model_main_roberta_conditional_prob.ipynb
-          - 25_model_main_roberta_dhc.ipynb
+          - 20_roberta_singlehead.ipynb
+          - 21_roberta_multihead.ipynb
+          - 22_roberta_multihead_regression.ipynb
+          - 23_roberta_multilabel.ipynb
+          - 24_roberta_conditional_prob.ipynb
+          - 25_roberta_dhc.ipynb
         - section: GPT2-based models
           contents:
-          - 20_model_main_gpt2_singlehead.ipynb
-          - 21_model_main_gpt2_multihead.ipynb
-          - 22_model_main_gpt2_multihead_regression.ipynb
+          - 20_gpt2_singlehead.ipynb
+          - 21_gpt2_multihead.ipynb
+          - 22_gpt2_multihead_regression.ipynb
       - section: Utility
         contents:
         - 07_utils.ipynb
