--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -12,14 +12,18 @@ website:
           contents:
           - 01_text_augmentation.ipynb
           - 02_text_transformation.ipynb
-        - section: Text Controller
+        - section: Text Controller For Supervised Learning
           contents:
           - 00_text_main.ipynb
           - 00_text_main_streaming.ipynb
           - 00_text_main_benchmark.ipynb
+        - section: Text Controller For Language Modeling
+          contents:
+          - 00_text_main_lm.ipynb
+          - 00_text_main_lm_streaming.ipynb
       - section: Model
         contents:
-        - section: Model Controller
+        - section: Model Controller For Supervised Learning
           contents:
           - 03_model_main.ipynb
         - section: Roberta-based model definitions
@@ -30,12 +34,12 @@ website:
         - section: GPT2-based model definitions
           contents:
           - 09_models.gpt2.classifiers.ipynb
-      - section: Evaluations
+      - section: Evaluations For Supervised Learning
         contents:
         - 08_evaluations.ipynb
       - section: All use-cases
         contents:
-        - section: Roberta-based models
+        - section: Roberta-based models for Supervised Learning
           contents:
           - 20_roberta_singlehead.ipynb
           - 21_roberta_multihead.ipynb
@@ -43,7 +47,7 @@ website:
           - 17_roberta_conditional_prob.ipynb
           - 18_roberta_dhc.ipynb
           - 19_roberta_multilabel.ipynb
-        - section: GPT2-based models for classification
+        - section: GPT2-based models for Supervised Learning
           contents:
           - 20_gpt2_singlehead.ipynb
           - 21_gpt2_multihead.ipynb
