add more info for pip

--- a/settings.ini
+++ b/settings.ini
@@ -32,13 +32,13 @@ author = Quan Tran
 author_email = anhquan0412@gmail.com
 copyright = 2023 onwards, %(author)s
 description = Aim to be a convenient NLP library with the help from HuggingFace
-keywords = nbdev, jupyter, notebook, python, nlp, natural language processing, transformer, fastai, deep learning
-language = English
+keywords = nbdev, python, nlp, natural language processing, transformer, deep learning, envibert, roberta, gpt2, phobert
+language = English, Vietnamese
 status = 3
 user = anhquan0412
 
 ### Optional ###
-requirements = matplotlib pandas requests tqdm scikit-learn datasets<=2.14.4 underthesea dill transformers<=4.31.0 sentencepiece pyarrow unidecode wandb nlpaug
+requirements = matplotlib pandas requests tqdm scikit-learn datasets<=2.14.4 underthesea dill transformers<=4.31.0 sentencepiece pyarrow unidecode wandb
 pip_requirements = torch>=1.7,<2.1
 # dev_requirements =
 # console_scripts =
