finish draft for language model controller

--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ status = 3
 user = anhquan0412
 
 ### Optional ###
-requirements = matplotlib pandas requests tqdm scikit-learn datasets<=2.14.4 underthesea dill transformers<=4.31.0 sentencepiece pyarrow unidecode wandb
+requirements = matplotlib pandas requests tqdm scikit-learn datasets<=2.14.4 underthesea dill transformers<=4.31.0 sentencepiece pyarrow unidecode wandb evaluate
 pip_requirements = torch>=1.7,<2.1
 # dev_requirements =
 # console_scripts =
