fix setting ini

--- a/settings.ini
+++ b/settings.ini
@@ -33,7 +33,7 @@ author_email = anhquan0412@gmail.com
 copyright = 2023 onwards, %(author)s
 description = Aim to be a convenient NLP library with the help from HuggingFace
 keywords = nbdev, python, nlp, natural language processing, transformer, deep learning, envibert, roberta, gpt2, phobert
-language = English, Vietnamese
+language = English
 status = 3
 user = anhquan0412
 
