remove datasets and transformers, rerun all nbs

--- a/settings.ini
+++ b/settings.ini
@@ -5,8 +5,8 @@
 ### Python library ###
 repo = that-nlp-library
 lib_name = %(repo)s
-version = 0.1.9
-min_python = 3.7
+version = 0.2.0
+min_python = 3.9
 license = apache2
 black_formatting = False
 
@@ -38,7 +38,7 @@ status = 3
 user = anhquan0412
 
 ### Optional ###
-requirements = matplotlib pandas requests tqdm scikit-learn datasets<=2.14.4 underthesea dill transformers<=4.31.0 sentencepiece pyarrow unidecode wandb evaluate accelerate
+requirements = matplotlib pandas requests tqdm scikit-learn datasets underthesea dill transformers sentencepiece pyarrow unidecode wandb evaluate accelerate
 # pip_requirements = torch>=1.7,<=2.1
 # dev_requirements =
 # console_scripts =
