--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,51 +2,14 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - section: Quick Starts
+      - section: 1. Quick Starts
         contents:
         - 00_text_main.ipynb
         - 03_model_classification_tutorial.ipynb
         - 03_model_lm_roberta_tutorial.ipynb
-      - section: Text
+      - section: 2. All Use Cases
         contents:
-        - section: Text Process
-          contents:
-          - 01_text_augmentation.ipynb
-          - 02_text_transformation.ipynb
-        - section: Text Controller For Supervised Learning
-          contents:
-          - 00_text_main.ipynb
-          - 00_text_main_streaming.ipynb
-          - 00_text_main_benchmark.ipynb
-        - section: Text Controller For Language Modeling
-          contents:
-          - 00_text_main_lm.ipynb
-          - 00_text_main_lm_streaming.ipynb
-      - section: Model
-        contents:
-        - section: Model Controller For Supervised Learning
-          contents:
-          - 03_model_main.ipynb
-        - section: Model Controller for Language Modeling
-          contents:
-          - 03_model_lm_main.ipynb
-        - section: Roberta-based classification model definitions
-          contents:
-          - 04_models.roberta.classifiers.ipynb
-          - 05_models.roberta.deep_hierarchical_classifiers.ipynb
-          - 06_models.roberta.conditional_prob_classifiers.ipynb
-        - section: GPT2-based classification model definitions
-          contents:
-          - 09_models.gpt2.classifiers.ipynb
-      - section: Evaluations For Supervised Learning
-        contents:
-        - 08_evaluations.ipynb
-      - section: Hidden States Utilization
-        contents:
-        - 08_hidden_states.ipynb
-      - section: All use-cases
-        contents:
-        - section: Roberta-based models for Supervised Learning
+        - section: a. Roberta-based models for Supervised Learning
           contents:
           - 20_roberta_singlehead.ipynb
           - 21_roberta_multihead.ipynb
@@ -54,17 +17,58 @@ website:
           - 17_roberta_conditional_prob.ipynb
           - 18_roberta_dhc.ipynb
           - 19_roberta_multilabel.ipynb
-        - section: GPT2-based models for Supervised Learning
+        - section: b. GPT2-based models for Supervised Learning
           contents:
           - 20_gpt2_singlehead.ipynb
           - 21_gpt2_multihead.ipynb
           - 22_gpt2_multihead_regression.ipynb
-        - section: Masked Language Model Training
+        - section: c. Masked Language Model Training
           contents:
           - 03_model_lm_roberta_tutorial.ipynb
-        - section: Causal Language Model Training
+        - section: d. Causal Language Model Training
           contents:
           - 03_model_lm_gpt2_tutorial.ipynb
-      - section: Utility
+        - section: e. Training A Streamed Dataset
+          contents:
+          - 20_roberta_singlehead_for_streaming.ipynb
+          - 23_roberta_lm_for_streaming.ipynb
+      - section: 3. Evaluations For Supervised Learning
+        contents:
+        - 08_evaluations.ipynb
+      - section: 4. Hidden States Extraction
+        contents:
+        - 08_hidden_states.ipynb
+      - section: 5. Text Classes
+        contents:
+        - section: a. Text Processing
+          contents:
+          - 01_text_augmentation.ipynb
+          - 02_text_transformation.ipynb
+        - section: b. Text Controller For Supervised Learning
+          contents:
+          - 00_text_main.ipynb
+          - 00_text_main_streaming.ipynb
+          - 00_text_main_benchmark.ipynb
+        - section: c. Text Controller For Language Modeling
+          contents:
+          - 00_text_main_lm.ipynb
+          - 00_text_main_lm_streaming.ipynb
+      - section: 6. Model Classes
+        contents:
+        - section: a. Model Controller For Supervised Learning
+          contents:
+          - 03_model_main.ipynb
+        - section: b. Model Controller for Language Modeling
+          contents:
+          - 03_model_lm_main.ipynb
+        - section: c. Roberta-based classification Model 
+          contents:
+          - 04_models.roberta.classifiers.ipynb
+          - 05_models.roberta.deep_hierarchical_classifiers.ipynb
+          - 06_models.roberta.conditional_prob_classifiers.ipynb
+        - section: d. GPT2-based classification Model
+          contents:
+          - 09_models.gpt2.classifiers.ipynb
+      - section: 7. Utility
         contents:
         - 07_utils.ipynb
